@@ -676,24 +676,24 @@
       </component>
       <component name="gimp-perl" dir="gimp">
 	<podir dir="plug-ins/perl/po"/>
-	<potname name="gimp-perl.pot"/>
+	<potname name="gimp.pot"/>
 	<branch name="gimp-1-2"/>
       </component>
       <component name="gimp-libgimp" dir="gimp">
 	<podir dir="po-libgimp"/>
-	<potname name="gimp-libgimp.pot"/>
+	<potname name="gimp.pot"/>
 	<branch name="gimp-1-2"/>
 	<regenerate/>
       </component>
       <component name="gimp-plugins" dir="gimp">
 	<podir dir="po-plug-ins"/>
-	<potname name="gimp-std-plugins.pot"/>
+	<potname name="gimp.pot"/>
 	<branch name="gimp-1-2"/>
         <regenerate/>
       </component>
       <component name="gimp-script-fu" dir="gimp">
 	<podir dir="po-script-fu"/>
-	<potname name="gimp-script-fu.pot"/>
+	<potname name="gimp.pot"/>
 	<branch name="gimp-1-2"/>
         <regenerate/>
       </component>
@@ -1939,7 +1939,7 @@
     <version release="gnome-1.4-fifth-toe">
       <component name="pan" dir="pan">
 	<podir dir="po"/>
-	<potname name="AC_PACKAGE_NAME.pot"/>
+	<potname name="pan.pot"/>
 	<branch name="pan-0-11-fix"/>
 	<regenerate/>
 	<download/>
@@ -1984,6 +1984,7 @@
 	<potname name="pong2.pot"/>
 	<branch name="HEAD"/>
 	<download/>
+	<regenerate/>
       </component>
     </version>
     <version release="gnome-2.0-extras">
@@ -1992,6 +1993,7 @@
 	<potname name="pong2.pot"/>
 	<branch name="HEAD"/>
 	<download/>
+	<regenerate/>
       </component>
     </version>
   </module>
@@ -2190,7 +2192,7 @@
     <version release="gnome-2.0-extras">
       <component name="uf-view" dir="uf-view">
 	<podir dir="po"/>
-	<potname name="AC_PACKAGE_NAME.pot"/>
+	<potname name="uf-view.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
