@@ -1,5 +1,9 @@
 2002-05-20  Carlos Perello Marin <carlos@gnome-db.org>
 
+	* translation-status.xml: More fixes.
+
+2002-05-20  Carlos Perello Marin <carlos@gnome-db.org>
+
 	* translation-status.xml: Added Xchat for GNOME 2.0.
 
 2002-05-19  Carlos Perello Marin <carlos@gnome-db.org>
